# OI

./: CMakeLists.txt  README.md  g  gcc.sh  k  runcpp.sh  template  test  test.cpp
.cph/: .test.cpp_094dea9d8f2aaec31ccaf6b00ac6cbdf.prob  .小红的_01_串_六.cpp_118c2569bc99d170f6cb86ddd4f2a8fc.prob
acwing/: main.cpp
atcoder/abc409/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp
atcoder/abc_392/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp
atcoder/abc_394/: B_cat.cpp  C_Debug.cpp  E_Palindromic_Shortest_Path.cpp  E_Palindromic_Shortest_Path_2.cpp
atcoder/abc_395/: A_Strictly_Increasing.cpp  B_Make_Target.cpp  C_Shortest_Duplicate_Subarray.cpp  D_Pigeon_Swap.cpp  E_Flip_Edge.cpp  E_Flip_Edge_2.cpp  F_Smooth_Occlusion.cpp
atcoder/abc_396/: A_Triple_Four.cpp  B_Card_Pile.cpp  C_Buy_Balls.cpp  D_Minimum_XOR_Path.cpp  E_Min_of_Restricted_Sum.cpp  F_Rotated_Inversions.cpp  a.cpp
atcoder/abc_397/: A_Thermometer.cpp  B_Ticket_Gate_Log.cpp  C_Variety_Split_Easy.cpp  D_Cubes.cpp  E_Path_Decomposition_of_a_Tree.cpp
atcoder/abc_398/: A_Doors_in_the_Center.cpp  B_Full_House_3.cpp  C_Uniqueness.cpp  D_Bonfire.cpp  E_Tree_Game.cpp  F_ABCBA.cpp
atcoder/abc_399/: A_Hamming_Distance.cpp  B_Ranking_with_Ties.cpp  C_Make_it_Forest.cpp  D_Switch_Seats.cpp  E_Replace.cpp  F_Range_Power_Sum.cpp  F_Range_Power_Sum_2.cpp
atcoder/abc_400/: A_ABC_400_Party.cpp  B_Sum_of_Geometric_Series.cpp  C_2_a_b_2.cpp  D_Takahashi_the_Wall_Breaker.cpp  E_Ringo_s_Favorite_Numbers_3.cpp  a.cpp
atcoder/abc_401/: A_Status_Code.cpp  B_Unauthorized.cpp  C_K_bonacci.cpp  D_Logical_Filling.cpp  E_Reachable_Set.cpp  F_Add_One_Edge_3.cpp  a.cpp
atcoder/abc_402/: A_CBC.cpp  B_Restaurant_Queue.cpp  C_Dislike_Foods.cpp  D_Line_Crossing.cpp  E_Payment_Required.cpp  F_Path_to_Integer.cpp  a.cpp
atcoder/abc_403/: A_Odd_Position_Sum.cpp  B_Four_Hidden.cpp  C_403_Forbidden.cpp  D_Forbidden_Difference.cpp  E_Forbidden_Prefix.cpp  t
atcoder/abc_404/: e.cpp
atcoder/abc_405/: A_Is_it_rated.cpp  B_Not_All.cpp  C_Sum_of_Product.cpp  D_Escape_Route.cpp  E_Fruit_Lineup.cpp  F_Chord_Crossing.cpp  (+1 more)
lc/: main.cpp
nowcoder/: main.cpp
template/: d.cpp  g.cpp  template.cpp.tem  template_stdcxx.cpp.tem
(+675 files in other folders)
