cmake_minimum_required(VERSION 3.17)
project(OI)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(b nowcoder/牛客周赛61/b.cpp)
add_executable(main nowcoder/main.cpp)
add_executable(a nowcoder/norank/香港城市大学（东莞）2024新生排位赛/a.cpp)
add_executable(c nowcoder/牛客周赛63/c.cpp)
add_executable(g nowcoder/牛客周赛66/g.cpp)
add_executable(h nowcoder/norank/香港城市大学（东莞）2024新生排位赛/h.cpp)
add_executable(e nowcoder/牛客周赛65/e.cpp)
add_executable(d nowcoder/norank/香港城市大学（东莞）2024新生排位赛/d.cpp)

add_executable(f nowcoder/牛客周赛65/f.cpp)

add_executable(f3_dynamic nowcoder/牛客周赛62/f3_dynamic.cpp)
add_executable(f3_dynamic_luogu nowcoder/牛客周赛62/f3_dynamic_luogu.cpp)

add_executable(k nowcoder/norank/中国地质大学/k.cpp)
